2009-01-20  Marc Singer  <elf@zealous.synapse.com>

	* Makefile (SUBLEVEL): v1.6.6 for Companion fixes so it can use a
	1.6.x version of APEX.

	* src/drivers/relocate-nand.c: Revised NAND relocator to work with
	the LPD7A404.  Considering that the only other user of the code is
	a test implemented for the LH79524, this should be safe to
	rework.  The key difference is that the relocator will address
	each page in turn instead of depending on an unreliable feature of
	NAND flash that automatically loads successive sectors.   

	* src/arch-arm/Kconfig: Changed the Companion bootstrap to use the
	NAND relocator.  This allows us to have a loader that is larger
	than 80KiB, the size of SRAM.
	Added a page size configuration option for relocation from NAND
	flash.

	* src/apex/cmd-version.c (cmd_version): Fixed display of
	environment variables s.t. the >64KiB length is properly shown in
	the version command output.

2009-01-05  Marc Singer  <elf@buici.com>

	* src/mach-orion5x/mv2120_config: Moving to the CodeSourcery
	compiler for thumb support.

	* src/arch-arm/lib/cp15-invalidate-dcache-va.c
	(invalidate_dcache_va): Conditionally compiling the
	invalidate-dcache-va function based on the presence of the macro
	and, therefore, the CP15 feature.

	* Makefile (SUBLEVEL): 1.6.5 for orion5x merge.

2009-01-04  Marc Singer  <elf@buici.com>

	* src/apex/cmd-flashusage.c (cmd_flashusage): New command to scan
	eraseblocks of a flash device for the presence of data.

	* src/mach-lh7952x/memory.h (RAM_BANK0_LENGTH): Fixed the
	declarations of the extents for the memory regions in the
	LH7952x.  The macros were correct for the LH79524 but not the
	LH79520.  This is now fixed.

	* src/drivers/drv-ext2.c (ext2_identify): Revised EXT2 driver to
	look for extended partitions and to cope with 64 bit IO.

	* include/driver.h: Support for 64 bit IO sizes.  This is only
	necessary for large devices like those accessible via ATA/SATA.